sdext.pdfimport: Use the original PDF file directly rather than a temp file

After you have openned a PDF file, previously:
1. The doc information is passed to PDFIRawAdaptor::importer. The rSourceData contains
the InputStream, the URL for the PDF file, etc.
2. PDFIRawAdaptor::importer then passes the InputStream to PDFIRawAdaptor::parse.
PDFIRawAdaptor::parse detected that it is InputStream, thus calls xpdf_ImportFromStream.
3. xpdf_ImportFromStream (in wrapper.cxx) then "copies" the InputStream content to
a temp PDF file (in the tmp directory), then passes the URL of the temp PDF file
to xpdf_ImportFromFile.
4. xpdf_ImportFromFile then reads the temp file, checkEncryption, then uses the
xpdfimport executable to generate the tokens in order to assemble a Flat ODF XML
file to be rendered in Draw / Writer etc.

So why do we generate a temp PDF file based on the InputStream and then use the URL
of the temp file as the source to be used by Poppler for parsing? Why not pass the
original PDF URL directly to checkEncryption and to Poppler?
Importantly, using the URL directly also has the advantage that we can pass the URL
to poppler and use poppler's checkEncryption rather than our own checkEncryption,
After this, we may try to fix the problem in tdf#106057: "General input/output error
loading pdf file (because of multiple trailers which is valid per PDF specification)"
in a separate commit.

In this patch, I:
* Remove the xInput argument in PDFIRawAdaptor::parse and move the
rURL to the first position;
* Revise PDFIRawAdaptor::importer to pass the aURL to `parse`, while tell the XInput
to close and clear the InputStream early as we do not use that in our sdext/pdfimport
parsing.
* Also changed the bSuccess to be const in PDFIRawAdaptor::parse.

Now, after you open a PDF file:
1. The doc information is passed to PDFIRawAdaptor::importer. The rSourceData contains
the InputStream, the URL for the PDF file, etc.
2. PDFIRawAdaptor::importer then passes the URL to PDFIRawAdaptor::parse, which then
calls xpdf_ImportFromFile directly rather than generate a temp pdf file.
3. xpdf_ImportFromFile then reads the original PDF file, checkEncryption, then uses the
xpdfimport executable to generate the tokens in	order to assemble a Flat ODF XML
file to	be rendered in Draw / Writer etc.

Change-Id: I5b7300678c512076349f217ade315085fd392055