sdext/source/pdfimport/pdfiadaptor.hxx
@@ -90,12 +90,11 @@ namespace pdfi
             css::frame::XModel >           m_xModel;
         TreeVisitorFactorySharedPtr                   m_pVisitorFactory;
 
-        bool parse( const css::uno::Reference<css::io::XInputStream>&       xInput,
+        bool parse( const OUString& rURL,
                     const css::uno::Reference<css::task::XInteractionHandler>& xIHdl,
                     const OUString&                                                          rPwd,
                     const css::uno::Reference<css::task::XStatusIndicator>& xStatus,
                     const XmlEmitterSharedPtr&                                                    rEmitter,
-                    const OUString&                                                          rURL,
                     const OUString&                                         rFilterOptions);
 
     public:
